--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 }
 
 #containerCarrito{
-    font-size: 3em;
+    font-size: 2em;
 }
 
 #containerCarrito div{
@@ -116,6 +116,34 @@
 
 /* Fin vaciar carrito */
 
+/* Boton agregar restar */
+.myButton {
+	display: inline;
+	box-shadow: 2px 3px 0px 0px #899599;
+	background:linear-gradient(to bottom, #ededed 5%, #bab1ba 100%);
+	background-color:#ededed;
+	border-radius:42px;
+	display:inline-block;
+	cursor:pointer;
+	color:#3a8a9e;
+	font-family:Arial;
+	font-size:17px;
+	font-weight:bold;
+	font-style:italic;
+	padding:3px 7px;
+	text-decoration:none;
+	text-shadow:1px 1px 0px #e1e2ed;
+}
+.myButton:hover {
+	background:linear-gradient(to bottom, #bab1ba 5%, #ededed 100%);
+	background-color:#bab1ba;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
+}
+/* Fin boton agregar restar */
+
 /* seccion carrito */
 #panelCarrito{
     position: fixed;
@@ -131,7 +159,7 @@
     animation-duration: 0.5s;
 }
 #containerCarrito{
-    padding: 8vh 4vw;
+    padding: 0px 4vw;
 }
 /* #cerrarCarrito:after{
     display: inline-block;
