--- a/style.css
+++ b/style.css
@@ -3,7 +3,10 @@
 	margin: 0;
 	padding: 0;
 }
-
+h1{
+	display: inline;
+	font-family: 'Cinzel Decorative', cursive;
+}
 .imgCover{
     object-fit: cover;
 }
@@ -18,6 +21,7 @@
 
 #containerCarrito{
     font-size: 2em;
+	font-family: 'Montserrat', sans-serif;
 }
 
 #containerCarrito div{
@@ -117,30 +121,30 @@
 /* Fin vaciar carrito */
 
 /* Boton agregar restar */
-.myButton {
-	display: inline;
-	box-shadow: 2px 3px 0px 0px #899599;
-	background:linear-gradient(to bottom, #ededed 5%, #bab1ba 100%);
-	background-color:#ededed;
-	border-radius:42px;
-	display:inline-block;
-	cursor:pointer;
-	color:#3a8a9e;
-	font-family:Arial;
-	font-size:17px;
-	font-weight:bold;
-	font-style:italic;
-	padding:3px 7px;
-	text-decoration:none;
-	text-shadow:1px 1px 0px #e1e2ed;
+.myButton{
+font-weight: bold;
+font-size: 14px;
+color: #fff;
+background-color: #e76f51;
+padding: 2px 10px 6px 10px;
+border: 2px;
+border-color: #e76f51;
+box-shadow: rgb(0, 0, 0) 0px 0px 0px 0px;
+border-radius: 50px;
+transition : 400ms;
+display: inline;
+flex-direction: row;
+align-items: center;
+cursor: pointer;
 }
-.myButton:hover {
-	background:linear-gradient(to bottom, #bab1ba 5%, #ededed 100%);
-	background-color:#bab1ba;
-}
-.myButton:active {
-	position:relative;
-	top:1px;
+
+.myButton:hover{
+
+transition : 400ms;
+/* padding: 10px 50px; */
+background-color: #fff;
+color: #e76f51;
+border: solid 2px #e76f51;
 }
 /* Fin boton agregar restar */
 
