--- a/style.css
+++ b/style.css
@@ -24,9 +24,9 @@ h1{
 	font-family: 'Montserrat', sans-serif;
 }
 
-#containerCarrito div{
+/* #containerCarrito div{
     margin-top: 20px;
-}
+} */
 #tituloCarrito{
     margin-top: 0;
 }
@@ -88,6 +88,15 @@ h1{
 }
 /* Fin boton carrito */
 
+/* #totalCarrito{
+	margin-left: auto;
+} */
+
+
+.buttonsDiv{
+	margin-left: 20px;
+}
+
 /* vaciar carrito */
 
 
@@ -126,16 +135,25 @@ font-weight: bold;
 font-size: 14px;
 color: #fff;
 background-color: #e76f51;
-padding: 2px 10px 6px 10px;
+/* padding: 2px 10px 6px 10px; */
+height: 20px;
+width: 30px;
 border: 2px;
 border-color: #e76f51;
 box-shadow: rgb(0, 0, 0) 0px 0px 0px 0px;
-border-radius: 50px;
 transition : 400ms;
-display: inline;
+display: block;
 flex-direction: row;
 align-items: center;
 cursor: pointer;
+}
+
+.agregar{
+	border-radius: 50px 50px 0px 0px;
+}
+
+.sacar{
+	border-radius: 0px 0px 50px 50px;
 }
 
 .myButton:hover{
@@ -147,6 +165,12 @@ color: #e76f51;
 border: solid 2px #e76f51;
 }
 /* Fin boton agregar restar */
+
+.cantCarr{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
 
 /* seccion carrito */
 #panelCarrito{
@@ -204,6 +228,43 @@ border: solid 2px #e76f51;
 }
 
 #close:after { transform: rotate(-45deg); }
+
+/* Tabla */
+table.blueTable {
+	border: 4px solid #FFFFFF;
+	width: 55vw;
+	text-align: center;
+	border-collapse: collapse;
+  }
+  table.blueTable td, table.blueTable th {
+	border: 1px solid #000000;
+	padding: 10px 1px;
+  }
+  /* table.blueTable tbody td {
+	/* font-size: 13px; */
+  /* }
+  table.blueTable thead {
+	} */
+  table.blueTable thead th {
+	/* font-size: 15px; */
+	font-weight: bold;
+	color: #000000;
+	text-align: center;
+  }
+  /* table.blueTable tfoot td {
+	 font-size: 14px; 
+  } */
+  table.blueTable tfoot .links {
+	text-align: right;
+  }
+  table.blueTable tfoot .links a{
+	display: inline-block;
+	background: #1C6EA4;
+	color: #FFFFFF;
+	padding: 2px 8px;
+	border-radius: 5px;
+  }
+  /* Fin tabla */
 
 @media (max-width: 992px) {
     .cardD{
