--- a/style.css
+++ b/style.css
@@ -23,7 +23,9 @@ h1{
     font-size: 2em;
 	font-family: 'Montserrat', sans-serif;
 }
-
+.cantInput{
+	width: 75px;
+}
 
 .form-control{
 	border-top-right-radius: 0px;
@@ -195,10 +197,35 @@ border: solid 2px #e76f51;
 #containerCarrito{
     padding: 0px 4vw;
 }
-/* #cerrarCarrito:after{
-    display: inline-block;
-    content: "\00d7"; 
-} */
+
+/* boton finalizar compra */
+#finCompra {
+	box-shadow:inset 0px 1px 0px 0px #3dc21b;
+	background:linear-gradient(to bottom, #44c767 5%, #5cbf2a 100%);
+	background-color:#44c767;
+	border-radius:3px;
+	border:1px solid #18ab29;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:16px;
+	font-weight:bold;
+	padding:9px 24px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #2f6627;
+	margin-top: 30px;
+}
+#finCompra:hover {
+	background:linear-gradient(to bottom, #5cbf2a 5%, #44c767 100%);
+	background-color:#5cbf2a;
+}
+#finCompra:active {
+	position:relative;
+	top:1px;
+}
+/* Fin boton finalizar compra */
+
 #close {
 	overflow: hidden;
 	position: relative;
